# WGR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WeatherGlance.rc  app.manifest  build.ps1  build_ico.py  compress_assets.cmake  main.cpp  setup-ios-local.sh
.github/: copilot-instructions.md
.github/workflows/: android.yml  garmin.yml  ios-release.yml  ios.yml
Assets/: Drizzle.psd  radar-map.html  us-states.geo.json
Assets/screenshots/: README.md
android/: keystore.properties.template  settings.gradle.kts  sync-assets.ps1
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/drizzle/app/: MainActivity.kt
android/app/src/main/res/values/: themes.xml
docs/: PRIVACY.md  PUBLISHING.md
garmin/: README.md  build.ps1  manifest.xml
garmin/converter/: drizzle_gif_converter.py
garmin/resources/drawables/: drawables.xml
garmin/resources/strings/: strings.xml
garmin/source/: DrizzleApp.mc  DrizzleData.mc  DrizzleDelegate.mc  DrizzleView.mc  RadarFrameRequest.mc  RadarRequest.mc
ios/: ExportOptions.plist  ExportOptionsWatch.plist
ios/Drizzle/: AppDelegate.swift  AppSchemeHandler.swift  Info.plist  LaunchScreen.storyboard  RadarViewController.swift
ios/Drizzle.xcodeproj/: project.pbxproj
ios/Drizzle.xcodeproj/xcshareddata/xcschemes/: Drizzle.xcscheme
ios/Drizzle/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Drizzle/Assets.xcassets/LaunchBackground.colorset/: Contents.json
ios/iDrizzle/: AppSchemeHandler.swift  Info.plist  RadarViewController.swift
ios/iDrizzle.xcodeproj/: project.pbxproj
ios/iDrizzle.xcodeproj/xcshareddata/xcschemes/: iDrizzle.xcscheme
ios/iDrizzle/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/iDrizzleWatch/: ContentView.swift  Info.plist  RadarHitMapper.swift  RadarService.swift  iDrizzleWatchApp.swift
ios/iDrizzleWatch Watch App/: ContentView.swift  GIFImage.swift  Info.plist  Local.xcconfig  RadarHitMapper.swift  RadarService.swift  iDrizzleWatchApp.swift  us-states.geo.json
ios/iDrizzleWatch Watch App/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/iDrizzleWatch.xcodeproj/: project.pbxproj
ios/iDrizzleWatch.xcodeproj/xcshareddata/xcschemes/: iDrizzleWatch.xcscheme
